--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -2440,21 +2440,21 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 0.125}
+                CR: {type: :float, value: 1.0}
                 FACTION: {type: :cexostr, value: Bugstorm}
                 NAME: {type: :cexostr, value: "K\xE4fer"}
                 RESREF: {type: :resref, value: bugstorm_bug0}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 0.125}
+                CR: {type: :float, value: 1.0}
                 FACTION: {type: :cexostr, value: Bugstorm}
                 NAME: {type: :cexostr, value: "K\xE4fer"}
                 RESREF: {type: :resref, value: bugstorm_bug1}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 0.125}
+                CR: {type: :float, value: 1.0}
                 FACTION: {type: :cexostr, value: Bugstorm}
                 NAME: {type: :cexostr, value: "K\xE4fer"}
                 RESREF: {type: :resref, value: bugstorm_bug2}
@@ -4015,7 +4015,7 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
-            CR: {type: :float, value: 5.0}
+            CR: {type: :float, value: 6.0}
             FACTION: {type: :cexostr, value: Defender}
             NAME: {type: :cexostr, value: "Albrecht, Paladin des Torm"}
             RESREF: {type: :resref, value: triade_albrecht}
@@ -4531,6 +4531,13 @@ MAIN:
             NAME: {type: :cexostr, value: Marlon Dantes}
             RESREF: {type: :resref, value: gabel_blacksmith}
           - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            CR: {type: :float, value: 7.0}
+            FACTION: {type: :cexostr, value: Defender}
+            NAME: {type: :cexostr, value: Martas}
+            RESREF: {type: :resref, value: martas}
+          - !nwn-lib.elv.es,2008-12/struct
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
             CR: {type: :float, value: 0.25}
