--- a/mod/itp/itempalcus.itp.yml
+++ b/mod/itp/itempalcus.itp.yml
@@ -1263,6 +1263,11 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            NAME: {type: :cexostr, value: "Plattenpanzer des Totenw\xE4chters"}
+            RESREF: {type: :resref, value: armor_kelemvor}
+          - !nwn-lib.elv.es,2008-12/struct
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             NAME: {type: :cexostr, value: "Prunkr\xFCstung"}
             RESREF: {type: :resref, value: ritterrstung001}
           - !nwn-lib.elv.es,2008-12/struct 
@@ -9956,6 +9961,16 @@ MAIN:
         NAME: {type: :cexostr, value: "Glatter, schwarzer Stein"}
         RESREF: {type: :resref, value: stone_of_weight}
       - !nwn-lib.elv.es,2008-12/struct 
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
+        NAME: {type: :cexostr, value: M7 Pulse Ammo}
+        RESREF: {type: :resref, value: m7_bolt}
+      - !nwn-lib.elv.es,2008-12/struct
+        __data_type: ITP/MAIN/LIST
+        __struct_id: 0
+        NAME: {type: :cexostr, value: M7 Pulse Rifle}
+        RESREF: {type: :resref, value: m7}
+      - !nwn-lib.elv.es,2008-12/struct
         __data_type: ITP/MAIN/LIST
         __struct_id: 0
         NAME: {type: :cexostr, value: Magische Granate}
