add 'Der Drachenhort - Keller'

--- a/mod/area/gabel_taverne.git.yml
+++ b/mod/area/gabel_taverne.git.yml
@@ -1445,8 +1445,8 @@ Door List:
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_taverneu_2_gabel_taverne}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
@@ -1473,7 +1473,7 @@ Door List:
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 0}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: DoubleDoors}
+    Tag: {type: :cexostr, value: gabel_taverne_2_gabel_taverneu}
     TemplateResRef: {type: :resref, value: nw_door_ttr_15}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
