--- a/mod/utc/schneeleopard.utc.yml
+++ b/mod/utc/schneeleopard.utc.yml
@@ -32,7 +32,7 @@ Equip_ItemList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpsp001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewps001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 65536, EquippedRes: {type: :resref, value: nw_it_crewpp001}}
-FactionID: {type: :word, value: 5}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
@@ -119,14 +119,14 @@ StartingPackage: {type: :byte, value: 0}
 Str: {type: :byte, value: 16}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: Schneeleopard}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: schneeleopard}
 WalkRate: {type: :int, value: 5}
-Wings: {type: :byte, value: 0}
+Wings_New: {type: :dword, value: 0}
 Wis: {type: :byte, value: 12}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
