--- a/mod/utc/gnoll_jaeger1.utc.yml
+++ b/mod/utc/gnoll_jaeger1.utc.yml
@@ -5,7 +5,7 @@ Appearance_Type: {type: :word, value: 388}
 BodyBag: {type: :byte, value: 0}
 CRAdjust: {type: :int, value: 1}
 Cha: {type: :byte, value: 8}
-ChallengeRating: {type: :float, value: 3.0}
+ChallengeRating: {type: :float, value: 4.0}
 ClassList: 
   type: :list
   value: 
@@ -13,50 +13,51 @@ ClassList:
     __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 14}
-    ClassLevel: {type: :short, value: 1}
+    ClassLevel: {type: :short, value: 2}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 7}
-    ClassLevel: {type: :short, value: 2}
+    ClassLevel: {type: :short, value: 1}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 13}
+Con: {type: :byte, value: 14}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 21}
+CurrentHitPoints: {type: :short, value: 26}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 15}
+Dex: {type: :byte, value: 14}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: kurzbogen}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2048, EquippedRes: {type: :resref, value: arrow_oak_iron}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: nw_aarcl002}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: langbogen005}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16384, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32768, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 65536, EquippedRes: {type: :resref, value: nw_it_crewpb001}}
-FactionID: {type: :word, value: 13}
+FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 228}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 34}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 27}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 30}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 34}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 3}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 46}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 289}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 45}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 46}}
 FirstName: 
   type: :cexolocstr
   value: 
     0: "Gnoll J\xE4ger"
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 0}
-HitPoints: {type: :short, value: 21}
+HitPoints: {type: :short, value: 26}
 Int: {type: :byte, value: 8}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
@@ -71,20 +72,13 @@ ItemList:
     InventoryRes: {type: :resref, value: gnollkopf}
     Repos_PosX: {type: :word, value: 0}
     Repos_Posy: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 1
-    Dropable: {type: :byte, value: 1}
-    InventoryRes: {type: :resref, value: arrow_oak_iron}
-    Repos_PosX: {type: :word, value: 2}
-    Repos_Posy: {type: :word, value: 0}
 LastName: 
   type: :cexolocstr
   value: 
     0: ""
 LawfulChaotic: {type: :byte, value: 0}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 24}
+MaxHitPoints: {type: :short, value: 32}
 NaturalAC: {type: :byte, value: 1}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 50}
@@ -109,24 +103,24 @@ ScriptUserDefine: {type: :resref, value: nw_c2_defaultd}
 SkillList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 1}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 1}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 1}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 7}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -146,15 +140,15 @@ StartingPackage: {type: :byte, value: 7}
 Str: {type: :byte, value: 10}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: gnoll_jaeger1}
-Tail: {type: :byte, value: 0}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
 TemplateResRef: {type: :resref, value: gnoll_jaeger1}
-WalkRate: {type: :int, value: 4}
-Wings: {type: :byte, value: 0}
-Wis: {type: :byte, value: 11}
+WalkRate: {type: :int, value: 5}
+Wings_New: {type: :dword, value: 0}
+Wis: {type: :byte, value: 12}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
 willbonus: {type: :short, value: 0}
