--- a/mod/utc/gnoll_reisser.utc.yml
+++ b/mod/utc/gnoll_reisser.utc.yml
@@ -4,117 +4,108 @@ __struct_id: 4294967295
 Appearance_Type: {type: :word, value: 388}
 BodyBag: {type: :byte, value: 0}
 CRAdjust: {type: :int, value: 0}
-Cha: {type: :byte, value: 12}
-ChallengeRating: {type: :float, value: 11.0}
+Cha: {type: :byte, value: 8}
+ChallengeRating: {type: :float, value: 5.0}
 ClassList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ClassList
     __struct_id: 2
-    Class: {type: :int, value: 0}
-    ClassLevel: {type: :short, value: 12}
+    Class: {type: :int, value: 14}
+    ClassLevel: {type: :short, value: 2}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __data_type: UTC/ClassList
+    __struct_id: 2
+    Class: {type: :int, value: 4}
+    ClassLevel: {type: :short, value: 3}
 Comment: {type: :cexostr, value: ""}
-Con: {type: :byte, value: 16}
+Con: {type: :byte, value: 14}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 144}
+CurrentHitPoints: {type: :short, value: 46}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 14}
+Dex: {type: :byte, value: 12}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
   value: 
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: nw_aarcl008}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: prim_zweihandaxt}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 2, EquippedRes: {type: :resref, value: nw_aarcl002}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 16, EquippedRes: {type: :resref, value: streitaxt005}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/Equip_ItemList, __struct_id: 32, EquippedRes: {type: :resref, value: holzrundschi001}}
 FactionID: {type: :word, value: 1}
 FeatList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 40}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 326}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 6}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 10}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 228}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 28}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 195}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 194}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 1089}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 3}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 4}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 2}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 32}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 46}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 44}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 45}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 73}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 111}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/FeatList, __struct_id: 1, Feat: {type: :word, value: 953}}
 FirstName: 
   type: :cexolocstr
   value: 
-    0: "Gnoll Stammesh\xE4uptling"
+    0: "Gnoll Rei\xDFer"
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 0}
-HitPoints: {type: :short, value: 144}
-Int: {type: :byte, value: 10}
+HitPoints: {type: :short, value: 46}
+Int: {type: :byte, value: 8}
 Interruptable: {type: :byte, value: 0}
 IsImmortal: {type: :byte, value: 0}
 IsPC: {type: :byte, value: 0}
-ItemList: 
-  type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/ItemList
-    __struct_id: 0
-    Dropable: {type: :byte, value: 1}
-    InventoryRes: {type: :resref, value: gnollkopf}
-    Repos_PosX: {type: :word, value: 0}
-    Repos_Posy: {type: :word, value: 0}
 LastName: 
   type: :cexolocstr
   value: 
     4: ""
 LawfulChaotic: {type: :byte, value: 0}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 192}
-NaturalAC: {type: :byte, value: 5}
-NoPermDeath: {type: :byte, value: 1}
+MaxHitPoints: {type: :short, value: 61}
+NaturalAC: {type: :byte, value: 1}
+NoPermDeath: {type: :byte, value: 0}
 PaletteID: {type: :byte, value: 50}
 PerceptionRange: {type: :byte, value: 11}
 Phenotype: {type: :int, value: 0}
 Plot: {type: :byte, value: 0}
 PortraitId: {type: :word, value: 604}
-Race: {type: :byte, value: 9}
-ScriptAttacked: {type: :resref, value: nw_c2_default5}
-ScriptDamaged: {type: :resref, value: nw_c2_default6}
-ScriptDeath: {type: :resref, value: nw_c2_default7}
-ScriptDialogue: {type: :resref, value: nw_c2_default4}
-ScriptDisturbed: {type: :resref, value: nw_c2_default8}
-ScriptEndRound: {type: :resref, value: nw_c2_default3}
-ScriptHeartbeat: {type: :resref, value: nw_c2_default1}
-ScriptOnBlocked: {type: :resref, value: nw_c2_defaulte}
-ScriptOnNotice: {type: :resref, value: nw_c2_default2}
-ScriptRested: {type: :resref, value: nw_c2_defaulta}
-ScriptSpawn: {type: :resref, value: nw_c2_default9}
-ScriptSpellAt: {type: :resref, value: nw_c2_defaultb}
-ScriptUserDefine: {type: :resref, value: nw_c2_defaultd}
+Race: {type: :byte, value: 12}
+ScriptAttacked: {type: :resref, value: x2_def_attacked}
+ScriptDamaged: {type: :resref, value: x2_def_ondamage}
+ScriptDeath: {type: :resref, value: x2_def_ondeath}
+ScriptDialogue: {type: :resref, value: x2_def_onconv}
+ScriptDisturbed: {type: :resref, value: x2_def_ondisturb}
+ScriptEndRound: {type: :resref, value: x2_def_endcombat}
+ScriptHeartbeat: {type: :resref, value: x2_def_heartbeat}
+ScriptOnBlocked: {type: :resref, value: x2_def_onblocked}
+ScriptOnNotice: {type: :resref, value: x2_def_percept}
+ScriptRested: {type: :resref, value: x2_def_rested}
+ScriptSpawn: {type: :resref, value: x2_def_spawn}
+ScriptSpellAt: {type: :resref, value: x2_def_spellcast}
+ScriptUserDefine: {type: :resref, value: x2_def_userdef}
 SkillList: 
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 13}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 13}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 13}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 9}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
@@ -123,54 +114,33 @@ SkillList:
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 5}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
   - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
-SoundSetFile: {type: :word, value: 251}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+  - !nwn-lib.elv.es,2008-12/struct {__data_type: UTC/SkillList, __struct_id: 0, Rank: {type: :byte, value: 0}}
+SoundSetFile: {type: :word, value: 65535}
 SpecAbilityList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/SpecAbilityList
-    __struct_id: 4
-    Spell: {type: :word, value: 422}
-    SpellCasterLevel: {type: :byte, value: 4}
-    SpellFlags: {type: :byte, value: 1}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/SpecAbilityList
-    __struct_id: 4
-    Spell: {type: :word, value: 422}
-    SpellCasterLevel: {type: :byte, value: 4}
-    SpellFlags: {type: :byte, value: 1}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/SpecAbilityList
-    __struct_id: 4
-    Spell: {type: :word, value: 269}
-    SpellCasterLevel: {type: :byte, value: 0}
-    SpellFlags: {type: :byte, value: 1}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: UTC/SpecAbilityList
-    __struct_id: 4
-    Spell: {type: :word, value: 269}
-    SpellCasterLevel: {type: :byte, value: 0}
-    SpellFlags: {type: :byte, value: 1}
-StartingPackage: {type: :byte, value: 0}
-Str: {type: :byte, value: 18}
+  value: []
+
+StartingPackage: {type: :byte, value: 76}
+Str: {type: :byte, value: 16}
 Subrace: {type: :cexostr, value: ""}
-Tag: {type: :cexostr, value: gnoll_haeuptling}
+Tag: {type: :cexostr, value: gnoll_brute}
 Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: gnoll_haeuptling}
+TemplateResRef: {type: :resref, value: gnoll_reisser}
 WalkRate: {type: :int, value: 4}
 Wings_New: {type: :dword, value: 0}
-Wis: {type: :byte, value: 14}
+Wis: {type: :byte, value: 12}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
 willbonus: {type: :short, value: 0}
