--- a/mod/utc/gnoll_schaman001.utc.yml
+++ b/mod/utc/gnoll_schaman001.utc.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2008-12/struct 
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: :word, value: 1294}
+Appearance_Type: {type: :word, value: 389}
 BodyBag: {type: :byte, value: 0}
 CRAdjust: {type: :int, value: 0}
-Cha: {type: :byte, value: 16}
-ChallengeRating: {type: :float, value: 9.0}
+Cha: {type: :byte, value: 14}
+ChallengeRating: {type: :float, value: 5.0}
 ClassList: 
   type: :list
   value: 
@@ -13,7 +13,7 @@ ClassList:
     __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 2}
-    ClassLevel: {type: :short, value: 6}
+    ClassLevel: {type: :short, value: 3}
     MemorizedList0: 
       type: :list
       value: 
@@ -71,12 +71,6 @@ ClassList:
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: UTC/ClassList/MemorizedList1
         __struct_id: 3
-        Spell: {type: :word, value: 32}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList1
-        __struct_id: 3
         Spell: {type: :word, value: 6}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
@@ -101,38 +95,11 @@ ClassList:
         Spell: {type: :word, value: 34}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList2
-        __struct_id: 3
-        Spell: {type: :word, value: 34}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-    MemorizedList3: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
-        __struct_id: 3
-        Spell: {type: :word, value: 35}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
-        __struct_id: 3
-        Spell: {type: :word, value: 35}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/MemorizedList3
-        __struct_id: 3
-        Spell: {type: :word, value: 35}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
   - !nwn-lib.elv.es,2008-12/struct 
     __data_type: UTC/ClassList
     __struct_id: 2
     Class: {type: :int, value: 9}
-    ClassLevel: {type: :short, value: 6}
+    ClassLevel: {type: :short, value: 3}
     KnownList0: 
       type: :list
       value: 
@@ -169,41 +136,17 @@ ClassList:
         Spell: {type: :word, value: 24}
         SpellFlags: {type: :byte, value: 1}
         SpellMetaMagic: {type: :byte, value: 0}
-    KnownList2: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/KnownList2
-        __struct_id: 3
-        Spell: {type: :word, value: 120}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/KnownList2
-        __struct_id: 3
-        Spell: {type: :word, value: 157}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
-    KnownList3: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __data_type: UTC/ClassList/KnownList3
-        __struct_id: 3
-        Spell: {type: :word, value: 59}
-        SpellFlags: {type: :byte, value: 1}
-        SpellMetaMagic: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
 Con: {type: :byte, value: 14}
 Conversation: {type: :resref, value: ""}
-CurrentHitPoints: {type: :short, value: 40}
+CurrentHitPoints: {type: :short, value: 20}
 DecayTime: {type: :dword, value: 5000}
 Deity: {type: :cexostr, value: ""}
 Description: 
   type: :cexolocstr
   value: {}
 
-Dex: {type: :byte, value: 12}
+Dex: {type: :byte, value: 10}
 Disarmable: {type: :byte, value: 1}
 Equip_ItemList: 
   type: :list
@@ -232,10 +175,10 @@ FeatList:
 FirstName: 
   type: :cexolocstr
   value: 
-    0: "Gnoll Gro\xDFschamane"
+    0: Gnoll Schamane
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 0}
-HitPoints: {type: :short, value: 40}
+HitPoints: {type: :short, value: 20}
 Int: {type: :byte, value: 10}
 Interruptable: {type: :byte, value: 1}
 IsImmortal: {type: :byte, value: 0}
@@ -263,7 +206,7 @@ LastName:
     4: ""
 LawfulChaotic: {type: :byte, value: 0}
 Lootable: {type: :byte, value: 0}
-MaxHitPoints: {type: :short, value: 64}
+MaxHitPoints: {type: :short, value: 32}
 NaturalAC: {type: :byte, value: 1}
 NoPermDeath: {type: :byte, value: 1}
 PaletteID: {type: :byte, value: 50}
@@ -322,18 +265,18 @@ SpecAbilityList:
   value: []
 
 StartingPackage: {type: :byte, value: 2}
-Str: {type: :byte, value: 12}
+Str: {type: :byte, value: 10}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: gnoll_schamane}
-Tail_New: {type: :dword, value: 203}
+Tail_New: {type: :dword, value: 0}
 TemplateList: 
   type: :list
   value: []
 
-TemplateResRef: {type: :resref, value: gnoll_schamane}
-WalkRate: {type: :int, value: 7}
+TemplateResRef: {type: :resref, value: gnoll_schaman001}
+WalkRate: {type: :int, value: 4}
 Wings_New: {type: :dword, value: 0}
-Wis: {type: :byte, value: 16}
+Wis: {type: :byte, value: 14}
 fortbonus: {type: :short, value: 0}
 refbonus: {type: :short, value: 0}
 willbonus: {type: :short, value: 0}
