--- a/mod/area/vordronwald_kern.are.yml
+++ b/mod/area/vordronwald_kern.are.yml
@@ -30,7 +30,7 @@ Name:
   value: 
     0: Vordronwald
 NoRest: {type: :byte, value: 0}
-OnEnter: {type: :resref, value: sr_enter_inside}
+OnEnter: {type: :resref, value: sr_enter_forest}
 OnExit: {type: :resref, value: _area_leave}
 OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
