--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -423,7 +423,7 @@ MAIN:
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
                 CR: {type: :float, value: 2.0}
-                FACTION: {type: :cexostr, value: Tiere}
+                FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: Schneeleopard}
                 RESREF: {type: :resref, value: schneeleopard}
               - !nwn-lib.elv.es,2008-12/struct 
@@ -1222,6 +1222,13 @@ MAIN:
             FACTION: {type: :cexostr, value: Hostile}
             NAME: {type: :cexostr, value: Riesiger Feuerelementar}
             RESREF: {type: :resref, value: elem_f_riesig}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            CR: {type: :float, value: 2.0}
+            FACTION: {type: :cexostr, value: Hostile}
+            NAME: {type: :cexostr, value: Riesiger Feuerelementar}
+            RESREF: {type: :resref, value: ttt}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
@@ -2251,16 +2258,23 @@ MAIN:
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
                 CR: {type: :float, value: 3.0}
-                FACTION: {type: :cexostr, value: Gnolle}
-                NAME: {type: :cexostr, value: "Gnoll J\xE4ger"}
-                RESREF: {type: :resref, value: gnoll_jaeger1}
+                FACTION: {type: :cexostr, value: Hostile}
+                NAME: {type: :cexostr, value: Gnoll Brut}
+                RESREF: {type: :resref, value: gnoll_brute}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 5.0}
-                FACTION: {type: :cexostr, value: Gnolle}
+                CR: {type: :float, value: 9.0}
+                FACTION: {type: :cexostr, value: Hostile}
+                NAME: {type: :cexostr, value: "Gnoll Gro\xDFschamane"}
+                RESREF: {type: :resref, value: gnoll_schamane}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 4.0}
+                FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: "Gnoll J\xE4ger"}
-                RESREF: {type: :resref, value: gnoll_jaeger2}
+                RESREF: {type: :resref, value: gnoll_jaeger1}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
@@ -2271,10 +2285,31 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 10.0}
-                FACTION: {type: :cexostr, value: Gnolle}
+                CR: {type: :float, value: 8.0}
+                FACTION: {type: :cexostr, value: Hostile}
+                NAME: {type: :cexostr, value: "Gnoll Pr\xE4dator"}
+                RESREF: {type: :resref, value: gnoll_jaeger2}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 8.0}
+                FACTION: {type: :cexostr, value: Hostile}
+                NAME: {type: :cexostr, value: "Gnoll Rei\xDFer"}
+                RESREF: {type: :resref, value: gnoll_reisser}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 6.0}
+                FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: Gnoll Schamane}
-                RESREF: {type: :resref, value: gnoll_schamane}
+                RESREF: {type: :resref, value: gnoll_schaman001}
+              - !nwn-lib.elv.es,2008-12/struct 
+                __data_type: ITP/MAIN/LIST/LIST/LIST
+                __struct_id: 0
+                CR: {type: :float, value: 16.0}
+                FACTION: {type: :cexostr, value: Hostile}
+                NAME: {type: :cexostr, value: "Gnoll Schl\xE4chter"}
+                RESREF: {type: :resref, value: gnoll_butcher}
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
@@ -2285,8 +2320,8 @@ MAIN:
               - !nwn-lib.elv.es,2008-12/struct 
                 __data_type: ITP/MAIN/LIST/LIST/LIST
                 __struct_id: 0
-                CR: {type: :float, value: 15.0}
-                FACTION: {type: :cexostr, value: Gnolle}
+                CR: {type: :float, value: 18.0}
+                FACTION: {type: :cexostr, value: Hostile}
                 NAME: {type: :cexostr, value: "Gnoll Stammesh\xE4uptling"}
                 RESREF: {type: :resref, value: gnoll_haeuptling}
               - !nwn-lib.elv.es,2008-12/struct 
@@ -3666,6 +3701,13 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            CR: {type: :float, value: 10.0}
+            FACTION: {type: :cexostr, value: Defender}
+            NAME: {type: :cexostr, value: Gord}
+            RESREF: {type: :resref, value: jade_gord}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             CR: {type: :float, value: 4.0}
             FACTION: {type: :cexostr, value: Defender}
             NAME: {type: :cexostr, value: Grumbelham Goldhand}
@@ -3968,6 +4010,13 @@ MAIN:
             FACTION: {type: :cexostr, value: Commoner}
             NAME: {type: :cexostr, value: Sherin}
             RESREF: {type: :resref, value: sherinib001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            CR: {type: :float, value: 5.0}
+            FACTION: {type: :cexostr, value: Defender}
+            NAME: {type: :cexostr, value: Siria}
+            RESREF: {type: :resref, value: jade_siria}
         STRREF: {type: :dword, value: 29}
       - !nwn-lib.elv.es,2008-12/struct 
         __data_type: ITP/MAIN/LIST
@@ -4089,6 +4138,13 @@ MAIN:
             FACTION: {type: :cexostr, value: Commoner}
             NAME: {type: :cexostr, value: Bauersfrau}
             RESREF: {type: :resref, value: bauer001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            CR: {type: :float, value: 0.25}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Bedienung}
+            RESREF: {type: :resref, value: gabel_wench}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
@@ -4316,6 +4372,13 @@ MAIN:
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
+            CR: {type: :float, value: 6.0}
+            FACTION: {type: :cexostr, value: Defender}
+            NAME: {type: :cexostr, value: Kalen}
+            RESREF: {type: :resref, value: jade_kalen}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
             CR: {type: :float, value: 9.0}
             FACTION: {type: :cexostr, value: Commoner}
             NAME: {type: :cexostr, value: Kara}
@@ -4537,7 +4600,7 @@ MAIN:
             FACTION: {type: :cexostr, value: Defender}
             NAME: {type: :cexostr, value: Martas}
             RESREF: {type: :resref, value: martas}
-          - !nwn-lib.elv.es,2008-12/struct
+          - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
             CR: {type: :float, value: 0.25}
@@ -4635,6 +4698,13 @@ MAIN:
             FACTION: {type: :cexostr, value: Defender}
             NAME: {type: :cexostr, value: Ritter}
             RESREF: {type: :resref, value: ritter001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __data_type: ITP/MAIN/LIST/LIST
+            __struct_id: 0
+            CR: {type: :float, value: 6.0}
+            FACTION: {type: :cexostr, value: Defender}
+            NAME: {type: :cexostr, value: Sael}
+            RESREF: {type: :resref, value: jade_sael}
           - !nwn-lib.elv.es,2008-12/struct 
             __data_type: ITP/MAIN/LIST/LIST
             __struct_id: 0
