--- a/mod/area/taverne_ug.are.yml
+++ b/mod/area/taverne_ug.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Die Gabel - Keller
+    0: "[ Gute Alte Zeit ] An der Gabel - Die Gabel - Keller"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
