rename Pfad in die Dunkelheit - Wasserhoehle to Schloss Dasha - Wasserhoehle

--- a/mod/area/castletimraw.are.yml
+++ b/mod/area/castletimraw.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: "Der Pfad in die Dunkelheit - Wasserh\xF6hle"
+    0: "Schloss Dasha - Wasserh\xF6hle"
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_cave}
 OnExit: {type: :resref, value: _area_leave}
