Schloss Bergspitze: remove wild_magic flag

--- a/mod/area/schlossbergspitz.git.yml
+++ b/mod/area/schlossbergspitz.git.yml
@@ -22392,13 +22392,7 @@ TriggerList:
 
 VarTable: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __data_type: GIT/VarTable
-    __struct_id: 0
-    Name: {type: :cexostr, value: wild_magic}
-    Type: {type: :dword, value: 1}
-    Value: {type: :int, value: 1}
+  value: []
 WaypointList: 
   type: :list
   value: []
