fix invalid values: area/traum_asc_ruine.are script, utc/bustorm_bug0 Tail

--- a/mod/utc/bugstorm_bug0.utc.yml
+++ b/mod/utc/bugstorm_bug0.utc.yml
@@ -125,7 +125,7 @@ StartingPackage: {type: :byte, value: 0}
 Str: {type: :byte, value: 10}
 Subrace: {type: :cexostr, value: ""}
 Tag: {type: :cexostr, value: bugstorm_bug}
-Tail: {type: :byte, value: 410}
+Tail_New: {type: :dword, value: 410}
 TemplateList: 
   type: :list
   value: []
