--- a/mod/area/traum_asc_ruine.are.yml
+++ b/mod/area/traum_asc_ruine.are.yml
@@ -30,7 +30,7 @@ Name:
   value: 
     0: Ein Traum
 NoRest: {type: :byte, value: 0}
-OnEnter: {type: :resref, value: sr_enter_interior}
+OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
 OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
